--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             { title: "Objects", file: "code/7.txt", keyLine: "Learn the basics of object-oriented programming.", slide: "https://docs.google.com/presentation/d/e/2PACX-1vRth4OfbmwsbQERePxqAGlrIh589Vm2vZPSwuXx--dMGxjiqbVne6hxJ6jnQq3zERIBwLl7BkaUgeXF/embed?start=true&loop=false&delayms=60000", video: "https://www.youtube.com/embed/rQ2gaqMEnAo", image: "images/7.png" }
         ];
 
-        const extrasContent = [
+        const extraContent = [
             { title: "Comprehensions", file: "code/ex1.txt", keyLine: "Understand and implement list, set, and dictionary comprehensions." },
             { title: "Wrappers", file: "code/ex2.txt", keyLine: "Learn about wrappers and decorators to enhance your functions." },
             { title: "Generators", file: "code/ex3.txt", keyLine: "Master generators to efficiently handle large data sets." },
