--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         });
 
         aboutTab.addEventListener('click', () => {
-            openItem({ title: 'About', file: 'files/about.txt', slide: '', video: '', image: '' });
+            openItem({ title: 'About', file: 'code/about.txt', slide: '', video: '', image: '' });
             aboutTab.classList.add('active');
         });
 
