--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 </head>
 <body>
     <div class="about-box">
-        <div class="about-option" id="aboutTab">About</div>
+        <div class="about-option" id="aboutTab">TSPython</div>
     </div>
     <div class="selection-box">
         <div class="selection-option" id="firstTab">Core</div>
