--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         }
         .image-container, .code-container {
             width: 48%;
-            margin-top: 5px;
+            margin-top: 0px;
         }
         .image-container img {
             max-width: 100%;
@@ -330,7 +330,7 @@
         });
 
         aboutTab.addEventListener('click', () => {
-            openItem({ title: 'About', file: 'code/about.txt', slide: '', video: '', image: '' });
+            openItem({ title: 'About', file: 'code/about.txt'});
             aboutTab.classList.add('active');
         });
 
