--- a/index.html
+++ b/index.html
@@ -270,37 +270,33 @@
         }
 
         function openItem(item) {
-    fetch(item.file)
-        .then(response => response.text())
-        .then(text => {
-            let formattedText;
-            if (item.title === 'About' || extraContent.includes(item) || window.innerWidth <= 600) {
-                formattedText = `<div class="code-container"><code>${text}</code></div>`;
-            } else {
-                formattedText = `<div class="iframe-container">
-                                    <iframe src="${item.slide}" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-                                    <iframe src="${item.video}" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            fetch(item.file)
+                .then(response => response.text())
+                .then(text => {
+                    const formattedText = item.slide
+                        ? `<div class="iframe-container">
+                            <iframe src="${item.slide}" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                            <iframe src="${item.video}" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                           </div>
+                           <div class="content-container">
+                                <div class="image-container">
+                                    <img class="img-frame" src="${item.image}" alt="${item.title} Image">
                                 </div>
-                                <div class="content-container">
-                                    <div class="image-container">
-                                        <img class="img-frame" src="${item.image}" alt="${item.title} Image">
-                                    </div>
-                                    <div class="code-container">
-                                        <code>${text}</code>
-                                    </div>
-                                </div>`;
-            }
-            document.getElementById('modalTitle').innerText = item.title;
-            document.getElementById('modalContent').innerHTML = formattedText;
-            const modal = document.getElementById('myModal');
-            modal.style.display = "block";
-            modal.scrollTop = 0;
-            requestAnimationFrame(() => {
-                modal.classList.add('show');
-            });
-        });
-}
-
+                                <div class="code-container">
+                                    <code>${text}</code>
+                                </div>
+                            </div>`
+                        : `<div class="code-container"><code>${text}</code></div>`;
+                    document.getElementById('modalTitle').innerText = item.title;
+                    document.getElementById('modalContent').innerHTML = formattedText;
+                    const modal = document.getElementById('myModal');
+                    modal.style.display = "block";
+                    modal.scrollTop = 0;
+                    requestAnimationFrame(() => {
+                        modal.classList.add('show');
+                    });
+                });
+        }
 
         function closeModal() {
             const modal = document.getElementById('myModal');
