--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
         .image-container, .code-container {
             width: 48%;
             margin-top: 0px;
+            margin-bottom: 5px;
         }
         .image-container img {
             max-width: 100%;
