--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
             .selection-option, .about-option {
                 font-size: 1.5em; 
             }
+            .iframe-container {
+                margin-bottom: 10px;
+            }
         }
         ::-webkit-scrollbar {
             display: none;
@@ -191,13 +194,13 @@
             margin-bottom: 0px;
         }
         .iframe-container iframe {
-            width: 48%;
+            width: 50%;
             height: 300px;
             border: none;
             border-radius: 10px;
         }
         .image-container, .code-container {
-            width: 48%;
+            width: 50%;
             margin-top: 0px;
             margin-bottom: 10px;
         }
