--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
                 .then(text => {
                     const isMobile = window.innerWidth <= 600;
                     const formattedText = item.slide
-                        ? `<div class="iframe-container" style="${isMobile ? 'flex-direction: column;' : ''}">
-                                <iframe src="${item.slide}" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="${isMobile ? 'width: 100%;' : 'width: 49%;'}"></iframe>
-                                <iframe src="${item.video}" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="${isMobile ? 'width: 49%;' : 'width: 49%;'}"></iframe>
+                        ? `<div class="iframe-container" style="${isMobile ? 'flex-direction: column;' : 'margin-bottom:-10px'}">
+                                <iframe src="${item.slide}" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="${isMobile ? 'width: 100%; margin-bottom: 10px;' : 'width: 49%;'}"></iframe>
+                                <iframe src="${item.video}" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="${isMobile ? 'width: 100%;' : 'width: 49%;'}"></iframe>
                            </div>
                            <div class="content-container" style="${isMobile ? 'flex-direction: column;' : ''}">
                                 <div class="image-container" style="${isMobile ? 'width: 100%;' : 'width: 49%;'}">
